[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Zachary Kruse <zak1028@rit.edu>"]

[tool.poetry.dependencies]
python = "^3.7"
Flask = "^1.1.2"
celery = {extras = ["librabbitmq", "redis"], version = "^4.4.6"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
